# iu9-optimal-code-generation

./: .gitignore  problems.org  shell.nix
lab1/: Makefile
lab1/src/gimple-debug/: gimple-debug.cpp
lab1/src/test/: test.c
lab2/: Makefile  compiler.cpp  example.ll  main.c  main.ll
lab3/: CMakeLists.txt  Makefile  example.c  example.ll  example.txt  example2.ll  example3.ll
lab3/cmake/: FetchAntlr4.cmake
lab3/docs/: TParser.g4
lab3/src/stewkk/useless/: CMakeLists.txt  main.cpp  some_test.cpp
lab3/src/stewkk/useless/logic/: llvm_ir_builder.cpp  llvm_ir_builder.hpp
lab4/cmake/: SetupLLVM.cmake
lab4/src/stewkk/useless/: main.cpp
lab4/src/stewkk/useless/codegen/: TLexer.cpp  TLexer.h  TLexer.interp  TLexer.tokens  TParser.cpp  TParser.h  TParser.interp  TParserBaseListener.cpp  TParserBaseListener.h  TParserBaseVisitor.cpp  TParserBaseVisitor.h  TParserListener.cpp  TParserListener.h  TParserVisitor.cpp  TParserVisitor.h
lab4/src/stewkk/useless/logic/: llvm_ir_builder.cpp  llvm_ir_builder.hpp
lab4/test/: CMakeLists.txt
